# LineChartEditor

./: CMakeLists.txt  Main.qml  README.md  controller.cpp  controller.h  handler.cpp  handler.h  main.cpp
